# nfl-betting-model

./: .gitignore  README.md  main.py  pyproject.toml
nfl_betting_app/: app.py  config.py  data_handler.py  data_retriever.py  feature_engineering.py  google_drive_handler.py
nfl_betting_app/nfl_pbp_analysis/: __init__.py  down_conversion_rate.py  game_statistics.py  pbp_data_models.py  pbp_data_models_factories.py  score_analysis.py  third_down_conversion.py  utils.py
nfl_betting_app/tests/: test_feature_engineering.py
nfl_betting_app/tests/nfl_pbp_analysis/: test_down_conversion_rate.py  test_game_statistics.py  test_integration_conversion_rates.py  test_pbp_data_models.py  test_pbp_data_models_factories.py  test_score_analysis.py
